Add primary currency to Accounts, Analytics, Areas, Categories and update corresponding sections in documentation.
