# app/controllers/areas_controller.rb
@@ -25,8 +25,11 @@ class AreasController < ApplicationController
       to = from.end_of_month
     end
 
-    currency_id = params[:currencyId] || current_user.currencies.first&.id || Currency.first.id
-    currency = Currency.find(currency_id)
+    if params.has_key?(:currency_id)
+      currency = Currency.find(params[:currency_id])
+    else
+      currency = current_user.primary_currency
+    end
 
     response = {currency: currency}
     area_transactions = @area.transactions.months(from, to).includes(account: {currency: :selling_rates}, area: {}, category: {})
